[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Minimal embeddable JavaScript subset"
edition = "2021"
license = "MIT"
name = "petit-js"
repository = "https://github.com/LucasPickering/petit-js"
version = "0.1.0"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.82.0"

[[bin]]
name = "petit_js"
path = "src/main.rs"

[dependencies]
indexmap = {version = "2.7.0", features = ["serde"]}
rslint_parser = "0.3.1"
serde = {version = "1.0.0", default-features = false, features = ["alloc", "derive", "rc"], optional = true}
thiserror = "2.0.10"

[features]
default = []
serde = ["dep:serde"]

[workspace.metadata.release]
pre-release-replacements = [
  {file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [] - "},
]
