[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Minimal embeddable JavaScript subset"
edition = "2021"
license = "MIT"
name = "petitscript"
repository = "https://github.com/LucasPickering/petitscript"
version = "0.1.0"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.82.0"

[[bin]]
name = "petitscript"
path = "src/main.rs"

[dependencies]
bytes = {version = "1.0.0", default-features = false, optional = true}
indexmap = {version = "2.7.0"}
rslint_parser = "0.3.1"
serde = {version = "1.0.0", default-features = false, features = ["alloc", "derive", "rc"], optional = true}
serde_json = {version = "1.0.140", optional = true}
thiserror = "2.0.10"

[features]
bytes = ["dep:bytes"]
default = []
serde = ["dep:serde", "dep:serde_json", "indexmap/serde"]

[workspace.metadata.release]
pre-release-replacements = [
  {file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [] - "},
]

[dev-dependencies]
static_assertions = "1.1.0"
test-case = "3.3.1"
